--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "express": "^4.18.1",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
